syntax="proto3";

package storehouse_service;
option go_package="genproto/storehouse_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service Transfer_receiveService {
    rpc CreateTransfer_receive(CreateTransfer_receiveRequest) returns (Transfer_receive) {}
    rpc GetByIDTransfer_receive(Transfer_receivePrimaryKey) returns (Transfer_receive) {}
    rpc GetListTransfer_receive(GetListTransfer_receiveRequest) returns (GetListTransfer_receiveResponse) {}
    rpc UpdateTransfer_receive(UpdateTransfer_receiveRequest) returns (Transfer_receive) {}
    rpc UpdatePatchTransfer_receive(UpdatePatchTransfer_receiveRequest) returns (Transfer_receive) {}
    rpc DeleteTransfer_receive(Transfer_receivePrimaryKey) returns (google.protobuf.Empty) {}
}

message Transfer_receivePrimaryKey {
    string id = 1;
}

message Transfer_receive {
    string id = 1;
    string date_time = 2;
    string description = 3;
    string comments = 4;
    string user_id = 5;
    string user_id_2 = 6;
    string branch_id = 7;
    string branch_id_2 = 8;
    string created_at = 9;
    string updated_at = 10;
}

message CreateTransfer_receiveRequest {
    string date_time = 1;
    string description = 2;
    string comments = 3;
    string user_id_2 = 4;
    string branch_id_2 = 5;
}

message UpdateTransfer_receiveRequest {
    string id = 1;
    string date_time = 2;
    string description = 3;
    string comments = 4;
    string user_id = 5;
    string user_id_2 = 6;
    string branch_id = 7;
    string branch_id_2 = 8;
}

message UpdatePatchTransfer_receiveRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListTransfer_receiveRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetListTransfer_receiveResponse {
    int32 count = 1;
    repeated Transfer_receive transfer_receives = 2;
}
